  regardless if it is a network or local fs path.
  *** This may potentially break backwards compatability with Zookeeper
  data that may already exist on network file systems. ***
Remove SPARK_LOCAL_SCRATCH_DIR_TYPE setting.
By default, set java.io.tmpdir in PIG_OPTS when running Pig. 
Support HADOOP_PER_JOB_HDFS_PATH and ZOOKEEPER_PER_JOB_DATA_DIR.

magpie 1.59
-----------
Rename submission script directories to include launching mechansim
  script-msub-slurm/ -> script-msub-slurm-srun/
  script-msub-torque/ -> script-msub-torque-pdsh/
  script-sbatch/ -> script-sbatch-srun/
Various documentation fixes
Few minor bug fixes

magpie 1.58
-----------
Default teragen to use reasonable number of map tasks given blocksize.
Support HADOOP_TERAGEN_MAP_COUNT terasort configuration.
Support enabling thrift server with Hbase.
Support the ability to add localized configuration, see README for details.

magpie 1.57
-----------
Use --time instead of SBATCH_TIMELIMIT in sbatch scripts
Fix corner case in MAGPIE_TIMELIMIT_MINUTES calculation if job < 1 hour
When resource manager is slurm, calculate time left in job dynamically instead of using fixed MAGPIE_STARTUP_TIME
In Hadoop terasort, check for old directories before removing them
Add various error checks for HDFS over Lustre/NetworkFS, including varying node counts and mounting with different Hadoop versions.
Fix up setup/cleanup/teardown code to fix various corner cases
Clean up setup code into a new script, reducing number of calls to srun, etc.
Fix msub-torque submission scripts to be able to use Tachyon.
Various README/documentation updates/upgrades.
Various other minor fixes

magpie 1.56
-----------
Various minor fixes.

magpie 1.55
-----------
Add basic acl checks for Hadoop.
Set default HDFS umask 077.
Add shared secret to Spark.

magpie 1.54
-----------
Add basic support for Tachyon (ALPHA).
Support HADOOP_MODE of "launch" for convenience.
Support MAGPIE_ENVIRONMENT_VARIABLE_SCRIPT_SHELL option.