@@ -1,0 +1,44 @@
+############################################################################
+# Moab Customizations
+############################################################################
+
+# Node count.  Node count should include one node for the
+# head/management/master node.  For example, if you want 8 compute
+# nodes to process data, specify 9 nodes below.
+#
+# If including Zookeeper, include expected Zookeeper nodes.  For
+# example, if you want 8 Hadoop compute nodes and 3 Zookeeper nodes,
+# specify 12 nodes (1 master, 8 Hadoop, 3 Zookeeper) 
+#
+# Also take into account additional nodes needed for other services,
+# for example HDFS federation.
+
+#MSUB -l nodes=<my node count>
+
+#MSUB -o ./moab-%j.out
+
+#MSUB -l partition=<my partition> 
+
+#MSUB -q <my batch queue>
+
+# Note defaults of MAGPIE_STARTUP_TIME & MAGPIE_SHUTDOWN_TIME, the
+# walltime should be a fair amount larger than them combined.
+
+#MSUB -l walltime=<my time in seconds or HH:MM:SS>
+
+#MSUB -l resfailpolicy=ignore
+
+#MSUB -V
+
+export MOAB_JOBNAME="<my job name>"
+
+export SLURM_TASKS_PER_NODE=1
+export SBATCH_EXCLUSIVE="yes"
+
+# Need to tell Magpie how you are submitting this job
+#
+# IMPORTANT: This msub file assumes Slurm is the underlying resource
+# manager.  If it is not, a new Magpie submission type should be added
+# into Magpie.
+export MAGPIE_SUBMISSION_TYPE="msubslurmsrun"
+
